change in index.html

--- a/index.html
+++ b/index.html
@@ -4,3 +4,11 @@
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
+
+         <div id="left-column">
+
+           <div class = "block">
+
+           <div class="main_photo">
+             <img src="avatar.jpg" width="160" height="160">
+             </div>
